# hiveden

./: .gitignore  .goreleaser.yml  README.md  config.example.yaml  config.yaml  go.mod  go.sum  pyproject.toml  requirements.txt
.github/workflows/: release.yaml
cmd/api/: main.go
cmd/cli/: main.go
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/backup_20260114/: plan.md  spec.md
docs/: PYPI_DEPENDENCIES.md
internal/api/: hw.go  network.go
internal/docker/: docker.go  docker_test.go  network.go  types.go
internal/hw/: hw.go  system.go  types.go
packaging/: hiveden.service
packaging/arch/: PKGBUILD  hiveden.install  hiveden.sysusers
packaging/debian/: changelog  control  hiveden.install  hiveden.service  postinst  preinst  prerm  py3dist-overrides  rules
packaging/fedora/: hiveden.spec
packaging/systemd/: hiveden-api.service  postinstall.sh
src/hiveden/: cli.py  pydantic_compat.py  version.py
src/hiveden/api/: dtos.py  server.py
src/hiveden/apps/: pihole.py  traefik.py
src/hiveden/appstore/: __init__.py  adoption_service.py  catalog_client.py  catalog_service.py  compose_translator.py  install_service.py  models.py  uninstall_service.py
src/hiveden/backups/: manager.py  scheduler.py
src/hiveden/bootstrap/: configs.py  defaults.py  manager.py
src/hiveden/cli/: __init__.py  apps_cli.py  docker.py  info.py  lxc.py  pkgs.py  shares.py  system.py  utils.py
src/hiveden/config/: settings.py
src/hiveden/db/: manager.py
src/hiveden/docker/: actions.py  containers.py  dependencies.py  images.py  models.py  networks.py
src/hiveden/explorer/: manager.py  models.py  operations.py  tasks.py
src/hiveden/hwosinfo/: __init__.py  devices.py  hw.py  models.py
src/hiveden/jobs/: __init__.py  manager.py  models.py
src/hiveden/lxc/: containers.py  models.py
src/hiveden/pkgs/: arch.py  base.py  debian.py  fedora.py  manager.py  models.py
src/hiveden/shares/: btrfs.py  models.py  smb.py  zfs.py
src/hiveden/shell/: INTEGRATION.md  QUICKSTART.md  README.md  SUMMARY.md  __init__.py  example.py  manager.py  models.py  websocket.py
src/hiveden/storage/: devices.py  manager.py  models.py  strategies.py
src/hiveden/systemd/: manager.py  models.py  (+1 more)
tests/: test_api_backups.py  test_appstore_adoption_service.py  test_appstore_catalog_client.py  test_appstore_catalog_service.py  test_appstore_compose_translator.py  test_appstore_router.py  test_backups_config.py  test_backups_lifecycle.py  test_backups_retention.py  test_backups_scheduler.py  test_btrfs.py  test_docker_container_config_dependencies.py  test_docker_dependencies.py  test_docker_dependencies_endpoint.py  test_explorer_delete.py  test_explorer_task_cancellation.py  test_explorer_upload.py  test_locations_tree.py  test_metrics_config.py  test_metrics_endpoint.py  test_pkgs_manager.py  test_privileged_container.py  test_privileged_optional.py  test_shell.py  test_storage_devices.py  test_storage_strategies.py
tests/cli/: test_apps.py  test_docker.py  test_info.py  test_lxc.py  test_main.py  test_pkgs.py  test_shares.py  test_system.py
tests/hwosinfo/: test_devices.py
(+30 files in other folders)
