[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hiveden"
version = "0.0.1"
authors = [
  { name="Ermal Guni", email="ermalguni@gmail.com" },
]
description = "A CLI tool and REST API for managing your personal server."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "fastapi",
    "uvicorn",
    "docker",
    "PyYAML",
    "psutil",
    "lxc",
]

[project.urls]
"Homepage" = "https://github.com/hiveden/hiveden"
"Bug Tracker" = "https://github.com/hiveden/hiveden/issues"

[project.scripts]
hiveden = "hiveden.cli:main"
