[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hiveden"
dynamic = ["version"]
authors = [
  { name="Ermal Guni", email="ermalguni@gmail.com" },
]
description = "A CLI tool and REST API for managing your personal server."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.optional-dependencies]
# These are PyPI-only packages that will be auto-installed during system package installation
extras = [
    "pihole6api",
    "yoyo-migrations",
]

[tool.setuptools.dynamic]
version = {attr = "hiveden.version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hiveden.db.migrations" = ["*.sql"]

[project.urls]
"Homepage" = "https://github.com/hiveden/hiveden"
"Bug Tracker" = "https://github.com/hiveden/hiveden/issues"

[project.scripts]
hiveden = "hiveden.cli:main"
