[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hiveden"
dynamic = ["version"]
authors = [
  { name="Ermal Guni", email="ermalguni@gmail.com" },
]
description = "A CLI tool and REST API for managing your personal server."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "fastapi",
    "uvicorn",
    "docker",
    "PyYAML",
    "psutil",
    "lxc",
    "paramiko",
    "websockets",
    "psycopg2",
    "APScheduler",
    "python-multipart",
    "yoyo-migrations",
]

[project.optional-dependencies]
# Optional integrations that are installed from PyPI for pip-based setups.
pihole = [
    "pihole6api",
]

[tool.setuptools.dynamic]
version = {attr = "hiveden.version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hiveden.db.migrations" = ["*.sql"]

[project.urls]
"Homepage" = "https://github.com/hiveden/hiveden"
"Bug Tracker" = "https://github.com/hiveden/hiveden/issues"

[project.scripts]
hiveden = "hiveden.cli:main"
